Bug 311528 - Renew-Subscription spam in /var/log/cups/access_log
Summary: Renew-Subscription spam in /var/log/cups/access_log
Status: RESOLVED FIXED
Alias: None
Product: print-manager
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Daniel Nicoletti
URL: https://bugzilla.redhat.com/show_bug....
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-11 15:29 UTC by nucleo
Modified: 2012-12-14 14:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nucleo 2012-12-11 15:29:13 UTC
There are a lot messages in /var/log/cups/access_log every 3-4 seconds "Renew-Subscription successful-ok" when kde-print-manager installed.

Reproducible: Always

Steps to Reproduce:
Just start KDE with installed kde-print-manager-0.2.0.
Actual Results:  
 /var/log/cups/access_log:

localhost - - [10/Dec/2012:04:38:02 +0200] "POST / HTTP/1.1" 200 437 Create-Printer-Subscription successful-ok
localhost - - [10/Dec/2012:04:38:05 +0200] "POST / HTTP/1.1" 200 183 Renew-Subscription successful-ok
localhost - - [10/Dec/2012:04:38:09 +0200] "POST / HTTP/1.1" 200 183 Renew-Subscription successful-ok
localhost - - [10/Dec/2012:04:38:12 +0200] "POST / HTTP/1.1" 200 183 Renew-Subscription successful-ok
localhost - - [10/Dec/2012:04:38:16 +0200] "POST / HTTP/1.1" 200 183 Renew-Subscription successful-ok
localhost - - [10/Dec/2012:04:38:19 +0200] "POST / HTTP/1.1" 200 183 Renew-Subscription successful-ok
localhost - - [10/Dec/2012:04:38:23 +0200] "POST / HTTP/1.1" 200 183 Renew-Subscription successful-ok
localhost - - [10/Dec/2012:04:38:26 +0200] "POST / HTTP/1.1" 200 183 Renew-Subscription successful-ok
localhost - - [10/Dec/2012:04:38:30 +0200] "POST / HTTP/1.1" 200 183 Renew-Subscription successful-ok
localhost - - [10/Dec/2012:04:38:33 +0200] "POST / HTTP/1.1" 200 183 Renew-Subscription successful-ok
localhost - - [10/Dec/2012:04:38:37 +0200] "POST / HTTP/1.1" 200 183 Renew-Subscription successful-ok
localhost - - [10/Dec/2012:04:38:40 +0200] "POST / HTTP/1.1" 200 183 Renew-Subscription successful-ok
localhost - - [10/Dec/2012:04:38:44 +0200] "POST / HTTP/1.1" 200 183 Renew-Subscription successful-ok
localhost - - [10/Dec/2012:04:38:47 +0200] "POST / HTTP/1.1" 200 183 Renew-Subscription successful-ok
localhost - - [10/Dec/2012:04:38:51 +0200] "POST / HTTP/1.1" 200 183 Renew-Subscription successful-ok
localhost - - [10/Dec/2012:04:38:54 +0200] "POST / HTTP/1.1" 200 183 Renew-Subscription successful-ok
localhost - - [10/Dec/2012:04:38:58 +0200] "POST / HTTP/1.1" 200 183 Renew-Subscription successful-ok
localhost - - [10/Dec/2012:04:39:01 +0200] "POST / HTTP/1.1" 200 183 Renew-Subscription successful-ok


If cups disabled there is spam in .xsession-errors:

plasma-desktop(1659) KCupsConnection::renewDBusSubscription: Request failed 1280 
plasma-desktop(1659) KCupsConnection::renewDBusSubscription: Request failed 1280 
plasma-desktop(1659) KCupsConnection::renewDBusSubscription: Request failed 1280 
plasma-desktop(1659) KCupsConnection::renewDBusSubscription: Request failed 1280 
plasma-desktop(1659) KCupsConnection::renewDBusSubscription: Request failed 1280 
plasma-desktop(1659) KCupsConnection::renewDBusSubscription: Request failed 1280 
plasma-desktop(1659) KCupsConnection::renewDBusSubscription: Request failed 1280 
plasma-desktop(1659) KCupsConnection::renewDBusSubscription: Request failed 1280 
plasma-desktop(1659) KCupsConnection::renewDBusSubscription: Request failed 1280 
plasma-desktop(1659) KCupsConnection::renewDBusSubscription: Request failed 1280

Expected Results:  
no spam