fix excessive renew-related log spam

BUG: 311528